--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <main class="main">
+      <header class="Header" id="header"></header>
+      <section id="content">
+        <div class="loading"></div>
+      </section>
+    </main>
+  </body>
 </html>
