--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="styles.css" type="text/css" />
+    <title>Cientifico</title>
   </head>
+
   <body>
     <main class="main">
-      <header class="Header" id="header"></header>
+      <header class="header" id="header"></header>
       <section id="content">
-        <div class="loading"></div>
+        <div class="main-loading"></div>
       </section>
     </main>
   </body>
